--- a/GawaNativeGettingStarted/GawaNativeGettingStarted.csproj
+++ b/GawaNativeGettingStarted/GawaNativeGettingStarted.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="LiveXAML" Version="2.1.73" />
   </ItemGroup>
 </Project>
