--- a/GawaNativeGettingStarted.iOS/GawaNativeGettingStarted.iOS.csproj
+++ b/GawaNativeGettingStarted.iOS/GawaNativeGettingStarted.iOS.csproj
@@ -65,6 +65,8 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GNWebViewRenderer.cs" />
+    <Compile Include="SafeAreaPaddingEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
