--- a/GawaNativeGettingStarted.iOS/GawaNativeGettingStarted.iOS.csproj
+++ b/GawaNativeGettingStarted.iOS/GawaNativeGettingStarted.iOS.csproj
@@ -124,6 +124,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Plugin.Permissions">
+      <Version>3.0.0.12</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
