--- a/GawaNativeGettingStarted/GawaNativeGettingStarted.csproj
+++ b/GawaNativeGettingStarted/GawaNativeGettingStarted.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="LiveXAML" Version="2.1.73" />
+    <PackageReference Include="Plugin.Permissions" Version="3.0.0.12" />
   </ItemGroup>
 </Project>
